added mkdocs setup , react and node setup and made few other changes

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,7 @@
 {
   "newFileLocation": "current",
-  "attachmentFolderPath": "./attachments"
+  "attachmentFolderPath": "./attachments",
+  "newLinkFormat": "relative",
+  "useMarkdownLinks": true,
+  "promptDelete": false
 }
