--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,20 +1,3 @@
-# Running Setup Locally
-
-1. Create python environment and activate it
-```bash
-python3 venv env-name
-source env-name/bin/activate
-```
-2. install `mkdocs` and `mkdocs-material` and some extensions and plugins
-```bash
-pip3 install mkdocs mkdocs-material mkdocs-minify-plugin
-```
-3. Run the website via following command
-```bash
-mkdocs serve
-```
-4. change the config file to the following 
-```yml
 # # Project Information
 site_name: XOXO Docs
 site_url: https://docs.xoxoharsh.in/
@@ -85,6 +68,8 @@ theme:
     text: Roboto
     code: Roboto Mono
   language: en
+extra_css:
+  - stylesheets/extra.css
 # # Plugins
 plugins:
   # - blog
@@ -117,9 +102,9 @@ markdown_extensions:
       smart_enable: all
   - pymdownx.caret
   - pymdownx.details
-  - pymdownx.emoji:
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
+  # - pymdownx.emoji:
+  #     emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  #     emoji_index: !!python/name:material.extensions.emoji.twemoji
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
@@ -134,24 +119,13 @@ markdown_extensions:
   - pymdownx.mark
   - pymdownx.smartsymbols
   - pymdownx.snippets:
-      auto_append:
-        - includes/mkdocs.md
   - pymdownx.superfences:
-      custom_fences:
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
       combine_header_slug: true
-      slugify: !!python/object/apply:pymdownx.slugs.slugify
-        kwds:
-          case: lower
+      # slugify: !!python/object/apply:pymdownx.slugs.slugify
+      #   kwds:
+      #     case: lower
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
-```
-5. Open the docs folder as vault in Obsidian
-6. Write the docs using Obsidian
-
-# Deploying the setup
